--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "microcms-js-sdk": "^3.1.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-lottie": "^1.2.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
