--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.0.0-canary.83",
     "microcms-js-sdk": "^3.1.2",
     "next": "14.2.5",
     "react": "^18",
